[package]
name = "axal-chip_8"
version = "0.0.0"
authors = [
  "Ryan Leckey <leckey.ryan@gmail.com>"
]

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1
debug-assertions = false
rpath = false
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.18"
rand = "0.3"
axal = { git = "https://github.com/mehcode/axal.git" }
float-cmp = "0.2.3"
