[package]
name = "xchip"
version = "0.1.0"
authors = [
  "Ryan Leckey <leckey.ryan@gmail.com>"
]

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1
debug-assertions = false
rpath = false
panic = "abort"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2.18"
rand = "0.3"
axal = { git = "https://github.com/mehcode/axal.git" }
